test/sema/exercise/struct_instantiation_not_a_struct.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct S {
  x: number
}

fn main(): void { 
  let s = S { x: 1 };

  // CHECK: [[# @LINE + 1 ]]:3: error: expected struct declaration to instantiate
  s { x: 2 };

  // CHECK: [[# @LINE + 1 ]]:3: error: expected struct declaration to instantiate
  main { x: 3 };

  // CHECK: [[# @LINE + 1 ]]:3: error: symbol 'NonExistent' not found
  NonExistent { x: 4 };
}

// CHECK-NOT: {{.*error.*}}
